<resources>
    <string name="app_name">Game Track</string>
    <string name="game_track_logo">Game Track Logo</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Don\'t Have an Account? Click Here</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="empty_games_image">Empty Games List Image</string>
    <string name="no_games_found">No Games Found</string>
    <string name="add_game">Add Game</string>
    <string name="save_game">Save Game</string>
    <string name="game_title">Game Title</string>
    <string name="developer">Developer</string>
    <string name="publisher">Publisher</string>
    <string name="release_year">Release Year</string>
    <string name="game_launcher">Game Launcher</string>
    <string name="add_a_game">Add a Game</string>
    <string name="map_name">Map Name</string>
    <string name="save_match">Save Match</string>
    <string name="kills">Kills</string>
    <string name="deaths">Deaths</string>
    <string name="main_weapon">Main Weapon</string>
    <string name="secondary_weapon">Secondary Weapon</string>
    <string name="match_assists">Match Assists</string>
    <string name="grenades_used">Grenades Used</string>
    <string name="match_score">Match Score</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="match_notes">Match Notes…</string>
    <string name="well_played">Well Played,</string>
    <string name="add_match">Add Match</string>
    <string name="match_length">Match Length</string>
    <string name="kills_icon">Kills Icon</string>
    <string name="assists_icon">Assists Icon</string>
    <string name="score_icon">Score Icon</string>
    <string name="assist_text_view">%1$d Assists</string>
    <string name="kills_text_view">%1$d Kills</string>
    <string name="score_text_view">%1$d Score</string>
    <string name="secondary">Secondary</string>
    <string name="win_or_lose">Win or Loss</string>
    <string name="match_won">Match Won</string>
    <string name="match_lost">Match Lost</string>
    <string name="matches_list_icon">Matches List Icon</string>
    <string name="matches">Matches</string>
    <string name="compare_matches_icon">Compare Matches Icon</string>
    <string name="compare">Compare</string>
    <string name="career_icon">Career Icon</string>
    <string name="career">Career</string>
    <string name="pick_your_first_match">Pick Your First Match</string>
    <string name="pick_your_second_match">Pick Your Second Match</string>
    <string name="compare_matches">Compare Matches</string>
    <string name="compare_title">%1$s vs. %2$s</string>
    <string name="compare_kills">%1$d K.I.A</string>
    <string name="compare_kills_positive">+%1$d K.I.A</string>
    <string name="compare_assist_positive">+%1$d Assists</string>
    <string name="compare_score_positive">+%1$d Score</string>
    <string name="done">Done</string>
    <string name="main_weapon_used_the_most">Main Weapon Used the Most</string>
    <string name="secondary_weapon_used_the_most">Secondary Weapon Used the Most</string>
    <string name="career_losses">Career Losses</string>
    <string name="career_wins">Career Wins</string>
    <string name="career_title">%1$s Career</string>
    <string name="win_count">%1$d Wins</string>
    <string name="loss_count">%1$d Losses</string>
</resources>
